--- a/FrontEnd/Css/HomeOwnerDashBoard.css
+++ b/FrontEnd/Css/HomeOwnerDashBoard.css
@@ -1,50 +1,20 @@
-* {
+html {
+    scroll-padding-top: 70px;
     font-family: 'Inter', sans-serif;
+
 }
 h2 {
-
     font-weight: 700;
     margin-bottom: 1.5rem;
 }
-
 h5, h6 {
     font-weight: 600;
 }
-
-.card-title {
-    font-size: 1.25rem;
-    font-weight: 600;
-}
-
-.small, small {
-    font-size: 0.875rem;
-    font-weight: 400;
-}
-
 body {
     margin: 0;
     position: relative;
     background: linear-gradient(135deg, #010122, #000000);
     color: white;
-
-}
-.card {
-    background-color: #001967;
-    color: white;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    box-shadow:
-            0 8px 32px rgba(0, 0, 0, 0.3),
-            0 2px 8px rgba(0, 0, 0, 0.2),
-            inset 0 1px 0 rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(10px);
-    transition: all 0.3s ease;
-}
-
-.card:hover {
-    transform: translateY(-4px);
-    box-shadow:
-            0 16px 48px rgba(0, 0, 0, 0.4),
-            0 8px 16px rgba(0, 0, 0, 0.3);
 }
 
 /*------------------------TOP NAV BAR----------------------------------*/
@@ -281,6 +251,7 @@ body {
 /*------------------------Dashboard Cards and All Buttons--------------------------*/
 .dashboard-section{
     height: auto;
+    margin-bottom: 45px;
 }
 .stats-card {
     margin-top: 20px;
@@ -320,6 +291,35 @@ body {
     transform: scale(1.2) rotate(5deg);
 }
 
+.card-title {
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+
+.small, small {
+    font-size: 0.875rem;
+    font-weight: 400;
+}
+
+.card {
+    background-color: #001967;
+    color: white;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    box-shadow:
+            0 8px 32px rgba(0, 0, 0, 0.3),
+            0 2px 8px rgba(0, 0, 0, 0.2),
+            inset 0 1px 0 rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    transition: all 0.3s ease;
+}
+
+.card:hover {
+    transform: translateY(-4px);
+    box-shadow:
+            0 16px 48px rgba(0, 0, 0, 0.4),
+            0 8px 16px rgba(0, 0, 0, 0.3);
+}
+
 .job-card {
     transition: transform 0.3s ease;
 }
@@ -338,11 +338,16 @@ body {
     color: white;
 }
 
+.application-card{
+    margin-bottom: 45px;
+}
+
 /*-----------------------------------------MEDIA QUERIES--------------------------------------*/
 
 /* Desktop styles - sidebar always visible */
 @media (min-width: 992px) {
-    .dashboard-section{
+
+    #dashboard-post-job-content{
         padding: 65px!important;
     }
     .navbar{
