Update Top nav Bar Icon and color

--- a/FrontEnd/Css/SignUp.css
+++ b/FrontEnd/Css/SignUp.css
@@ -231,7 +231,9 @@
 .nav-link,.navbar-brand{
     color: white!important;
 }
-
+.navbar-toggler {
+    color: #ffffff !important;
+}
 .text-center a {
     color: #32e1b6;
     text-decoration: none;
