--- a/FrontEnd/Css/WorkersDashBoard.css
+++ b/FrontEnd/Css/WorkersDashBoard.css
@@ -25,6 +25,9 @@ body {
     color: white!important;
     overflow: hidden;
 }
+.navbar-toggler {
+    color: #ffffff !important;
+}
 /*--------------------------SIDE NAVBAR--------------------------------*/
 
 /* Floating circle button with stunning design */
