--- a/FrontEnd/Css/AdminDashBoard.css
+++ b/FrontEnd/Css/AdminDashBoard.css
@@ -25,6 +25,9 @@ body {
     color: white!important;
     overflow: hidden;
 }
+.navbar-toggler {
+    color: #ffffff !important;
+}
 /*--------------------------SIDE NAVBAR--------------------------------*/
 
 /* Floating circle button with stunning design */
@@ -70,7 +73,7 @@ body {
     background: white;
     border-radius: 2px;
     transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+    box-shadow: 0 1px 2px rgb(255, 255, 255);
 }
 
 .hamburger-icon span:nth-child(1) {
