--- a/FrontEnd/Css/Login.css
+++ b/FrontEnd/Css/Login.css
@@ -234,3 +234,17 @@
 .navbar-toggler {
     color: #ffffff !important;
 }
+/*-------------------AUTO FILL Suggestions BG Color-------------------------*/
+/* Chrome, Safari, Edge autofill fix */
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px #000000 inset !important;
+    -webkit-text-fill-color: #fff !important;
+    transition: background-color 5000s ease-in-out 0s;
+}
+
+/* For Firefox */
+input:autofill {
+    box-shadow: 0 0 0px 1000px #000000 inset !important;
+    -webkit-text-fill-color: #fff !important;
+}
+
